<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marco.ambrosio@polito.it">Marco Ambrosio</maintainer>
  <license>Apache-2.0</license>

  <depend>apriltag_ros</depend>
  <depend>depthai_ros_driver</depend>
  <depend>perception</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>realsense2_camera</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
